Ensure tooltip arrow border won't bleed into content

--- a/fe/src/components/Tooltip/tooltip.module.css
+++ b/fe/src/components/Tooltip/tooltip.module.css
@@ -1,5 +1,6 @@
 .tooltip {
   --bg: var(--colors-bg-secondary);
+  --bd: var(--border-sm);
   --arrow-size: 0.8em;
   --margin: calc(var(--arrow-size) + var(--margin-xs));
 
@@ -10,7 +11,7 @@
   --clip: calc(0px - var(--sizes-1));
   box-shadow: var(--shadow-sm);
 
-  border: var(--border-sm) solid var(--colors-border-clear);
+  border: var(--bd) solid var(--colors-border-clear);
   background-color: var(--bg);
 
   &::before {
@@ -28,7 +29,8 @@
     margin-left: var(--margin);
 
     &::before {
-      transform: rotate(45deg) skew(-15deg, -15deg);
+      transform: rotate(45deg) skew(-15deg, -15deg)
+        translateX(calc(0px - var(--bd)));
       clip-path: inset(0px 0px var(--clip) var(--clip));
       left: calc(0px - (var(--arrow-size) / 2));
       border-left: inherit;
@@ -43,6 +45,7 @@
 
     &[data-place$='-start'] {
       margin-top: calc(0px - var(--arrow-size) / 2);
+
       &::before {
         top: calc(var(--arrow-size));
       }
@@ -50,6 +53,7 @@
 
     &[data-place$='-end'] {
       margin-bottom: calc(0px - var(--arrow-size) / 2);
+
       &::before {
         bottom: calc(var(--arrow-size));
       }
@@ -60,7 +64,7 @@
     margin-right: var(--margin);
 
     &::before {
-      transform: rotate(45deg) skew(-15deg, -15deg);
+      transform: rotate(45deg) skew(-15deg, -15deg) translateX(var(--bd));
       clip-path: inset(var(--clip) var(--clip) 0px 0px);
       right: calc(0px - (var(--arrow-size) / 2));
       border-right: inherit;
@@ -73,6 +77,7 @@
 
     &[data-place$='-start'] {
       margin-top: calc(0px - var(--arrow-size) / 2);
+
       &::before {
         top: calc(var(--arrow-size));
       }
@@ -80,6 +85,7 @@
 
     &[data-place$='-end'] {
       margin-bottom: calc(0px - var(--arrow-size) / 2);
+
       &::before {
         bottom: calc(var(--arrow-size));
       }
@@ -94,7 +100,7 @@
       border-bottom: inherit;
       border-right: inherit;
       bottom: calc(0px - (var(--arrow-size) / 2));
-      transform: rotate(45deg) skew(15deg, 15deg);
+      transform: rotate(45deg) skew(15deg, 15deg) translateY(var(--bd));
     }
 
     &[data-place='top']::before {
@@ -114,7 +120,8 @@
     margin-top: var(--margin);
 
     &::before {
-      transform: rotate(45deg) skew(15deg, 15deg);
+      transform: rotate(45deg) skew(15deg, 15deg)
+        translateY(calc(0px - var(--bd)));
       clip-path: inset(var(--clip) 0px 0px var(--clip));
       top: calc(0px - (var(--arrow-size) / 2));
       border-left: inherit;
